candle-einops-macros/tests/ui/fail/duplicate-new-mixed-axis.stderr
error: Axis `copies` appears more than once on the right
 --> tests/ui/fail/duplicate-new-mixed-axis.rs:4:21
  |
4 |     let _ = einops!("axis -> copies:2 {copies} axis", ());
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
